2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/base/tile.[ch]: changed tile_init() to tile_new() and return
	a GSlice-allocated Tile structure.

	(tile_destroy): free it using GSLice.

	* app/base/tile-manager.c: use tile_new() instead of g_new plus
	tile_init(). Also allocate TileManager itself using GSlice.

	* app/xcf/xcf-load.c (xcf_load_parasite): allocate parasites using
	gimp_parasite_new().

2007-05-22  Sven Neumann  <sven@gimp.org>

	* app/widgets/gtkvwrapbox.c
	* app/widgets/gtkhwrapbox.c: use GSlice to allocate structs.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-interface.c: use GSlice to allocate
	structs.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawable.c
	* libgimp/gimppixelfetcher.c
	* libgimp/gimpprogress.c
	* libgimp/gimppixelrgn.c
	* libgimp/gimpregioniterator.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushmenu.c
	* libgimp/gimpgradientmenu.c
	* libgimp/gimpfontmenu.c
	* libgimp/gimppatternmenu.c
	* libgimp/gimppalettemenu.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpbrushselect.c
	* libgimp/gimpgradientselect.c
	* libgimp/gimpfontselect.c
	* libgimp/gimppatternselect.c
	* libgimp/gimppaletteselect.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpprotocol.c: allocate structs using GSlice.

	* libgimpmodule/gimpmodule.c: allocate GimpModuleInfo using GSlice.

2007-05-22  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-params.c (plug_in_args_to_params): free
	parasites using gimp_parasite_free()

	* libgimp/gimp.c (gimp_run_procedure2): free wire messages using
	gimp_wire_destroy().

2007-05-22  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c
	* libgimpwidgets/gimpquerybox.c: allocate structs using GSlice.

2007-05-22  Sven Neumann  <sven@gimp.org>
